Support Android API 26 Java APIs